tests/baselines/reference/null.errors.txt
tests/cases/compiler/null.ts(3,9): error TS2531: Object is possibly 'null'.


==== tests/cases/compiler/null.ts (1 errors) ====
    var x=null; 
    var y=3+x;  
    var z=3+null; 
            ~~~~
!!! error TS2531: Object is possibly 'null'.
    class C {
    }
    function f() {
        return null;
        return new C();
    }
    function g() {
        return null;
        return 3;
    }
    interface I {
        x:any;
        y:number;
    }
    var w:I={x:null,y:3};
    
    
    